# anki-defs

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  FUTURE_FEATURES.md  GEMINI.md  PROGRESS.md  README.md  eslint.config.js  orig-claude-skill.md  package-lock.json  package.json  prek.toml  tsconfig.json  vitest.config.ts  word2anki-prompt.md
.github/workflows/: ci.yml  docs.yml
DOCS/: INDEX.md  api-contract.md  card-pipeline.md
PLANNING/: INDEX.md  addon-hardening.md  addon-testing-session.md  android-backend.md  anki-addon.md  architecture.md  audio-in-cards.md  claude-md-strategy.md  cloze-research-prompt.md  english-to-bangla.md  frontend-changes.md  json-first-pipeline.md  mcp-agent-cards.md  migration.md  next-steps.md  overview.md  pdf-to-cards.md  photo-cloze-integration-handoff.md  photo-cloze.md  progress.md  prompt-design.md  python-server-migration.md  quick-translate.md  repo-structure.md  security-audit.md  settings-design.md  settings-unification.md  team-workflow.md  ui-polish.md  webview-bridge.md
RESEARCH/: tts-api-comparison.md
android/: .gitignore  CLAUDE.md  FUTURE_FEATURES.md  settings.gradle.kts
android/DOCS/: file-map.md
android/PLANNING/: INDEX.md  future-features.md  repo-structure.md  webview-bridge.md
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
anki-addon/: .gitignore  README.md  __init__.py  _services_settings_wrapper.py  config.json  config.md  config.py  manifest.json  pyproject.toml
anki-addon/handlers/: __init__.py  anki_routes.py  chat_routes.py  photo_routes.py  platform_routes.py  session_routes.py  settings_routes.py
anki-addon/server/: app.py  bridge.py  router.py  sse.py  web.py
anki-addon/services/: ai_service.py  anki_service.py  card_extraction.py  claude_provider.py  gemini_provider.py  openrouter_provider.py  session_service.py  settings_service.py
anki-addon/tests/: conftest.py  test_card_extraction.py  test_shared_data.py  test_web_server.py
anki-addon/web/: index.html
ankiconnect-server/: CLAUDE.md  package.json  tsconfig.json
ankiconnect-server/DOCS/: file-map.md
ankiconnect-server/PLANNING/: INDEX.md
ankiconnect-server/src/: index.ts
app/: build.gradle.kts
client/: CLAUDE.md  index.html  package.json  tsconfig.json  vite.config.ts
client/DOCS/: file-map.md
client/PLANNING/: INDEX.md
client/src/: App.tsx  index.css  main.tsx
docs/: USAGE.md  astro.config.mjs  package.json
gradle/: libs.versions.toml
python-server/: pyproject.toml
python-server/anki_defs/: __main__.py  config.py  main.py
python-server/anki_defs/middleware/: auth.py
python-server/anki_defs/routes/: __init__.py  _helpers.py  anki.py  chat.py  photo.py  prompts.py  session.py  settings.py
python-server/anki_defs/services/: ai.py  anki_connect.py  card_extraction.py  note_types.py  session.py  settings.py  settings_base.py
python-server/anki_defs/services/providers/: __init__.py  base.py  claude.py  gemini.py  openrouter.py  tts.py
python-server/anki_defs/services/routes/: __init__.py  _helpers.py  _protocol.py  anki.py  chat.py  pdf.py  photo.py  prompts.py  session.py  settings.py
python-server/tests/: conftest.py  test_api_comparison.py
python-server/tests/test_routes/: test_routes.py
python-server/tests/test_services/: test_ai.py  test_anki_connect.py  test_card_extraction.py  test_note_types.py  test_session.py  test_settings.py
python-server/typings/: bottle.pyi
scripts/: build-addon.sh  check-api-contract.sh  install-dev.sh
server/: CLAUDE.md  package.json  tsconfig.json
server/DOCS/: file-map.md
server/src/: index.ts
shared/: CLAUDE.md  api-routes.json  package.json  tsconfig.json  types.ts
shared/DOCS/: types-reference.md
shared/PLANNING/: INDEX.md
shared/data/: model-pricing.json  note-types.json
shared/defaults/: settings.json
shared/languages/: bn-IN.json  bn.json  es-MX.json  ta-IN.json
shared/prompts/: analyze.json  card-extraction.json  define.json  distractors.json  english-to-bangla.json  english-to-target.json  focused-words.json  pdf-passage-extract.json  pdf-scout.json  pdf-vocab-extract.json  photo-cloze-extract.json  photo-cloze-transcribe.json  photo-extract.json  photo-generate.json  relemmatize.json  (+3 more)
(+159 files in other folders)
