[project]
name = "anki-defs-addon"
version = "0.1.0"
description = "Anki Desktop add-on for vocabulary flashcard generation with AI"
requires-python = ">=3.9"
# No runtime dependencies -- add-on uses only stdlib at runtime inside Anki.
# The anki/aqt packages are provided by Anki's runtime environment.
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "pyright>=1.1",
    "httpx>=0.28.1",
]
# Anki type stubs for development type checking.
# Install aqt[qt6] to get anki + aqt + PyQt6 type information.
aqt = [
    "aqt>=25.2",
]

[tool.uv]
# The add-on package itself is not installable -- it runs inside Anki.
# We only use uv for dev tooling.
package = false

[tool.pyright]
pythonVersion = "3.9"
include = [
    "__init__.py",
    "server",
    "handlers",
    "services",
]
# anki/aqt are provided by Anki's runtime, not installable as dev deps
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportMissingModuleSource = false

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",   # line too long -- handled by formatter
    "E722",   # bare except -- we use it intentionally for resilience
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
