[project]
name = "anki-defs-server"
version = "0.1.0"
description = "Python backend for anki-defs (replaces Express)"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
