[project]
name = "anki-defs-server"
version = "0.1.0"
description = "Python backend for anki-defs (replaces Express)"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "keyring>=25.7.0",
    "bottle>=0.13.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "webtest>=3.0.7",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
stubPath = "typings"

[tool.pytest.ini_options]
